# calc

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  assert.c  ast.c  calc.c  codeloc.c  eval.c  stream.c  token.c  vector.c
src/calc/: assert.h  ast.h  codeloc.h  eval.h  stream.h  token.h  vector.h
test/: CMakeLists.txt  test-ast.cpp  test-eval.cpp  test-token.cpp
